# Complexome

./: .gitignore  Complexome.ipynb  Complexome.py  ComplexomeDownloadandStatistics.ipynb  ProteomicsDysregulatedComplexesAnalysis.ipynb  README.md  devenv.nix  gleam.toml  index.html  manifest.toml  package-lock.json  package.json  pyproject.toml  tests.py  tsconfig.json  tsconfig.main.json  tsconfig.worker.json  tutorial.md  viewer.js
src/: complexome.gleam  cv.html  declarations.d.ts  globals.d.ts  index.html  numeric.mjs  parser.js  plot.mjs  setup.mjs  styles.css  tsv.js  vib.min.css  worker-decls.d.ts
src/main/: complexviewer.mjs  plot.mjs  setup.mjs
src/shared/: numeric.mjs  tsv.mjs
src/worker/: cache.mjs  parser.mjs
test/: setup.test.js
