[project]
name = "pipeline-notebooks"
version = "0.1.0"
description = ""
authors = [
    {name = "mguharoy",email = "61689647+mguharoy@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ruff (>=0.9.3,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
