[project]
name = "pipeline-notebooks"
version = "0.1.0"
description = ""
authors = [
    {name = "mguharoy",email = "61689647+mguharoy@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "matplotlib (>=3.10.0,<4.0.0)",
    "matplotlib-venn (>=1.1.2,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.5"
mypy = "^1.15.0"
pytest = "^8.3.5"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D103", "D107", "D203", "D213", "COM812", "FBT001", "FBT002", "S101", "S310", "T201"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests.py" = ["ANN201"]